src/main/kotlin/com/example/instargram/global/error/exception/ErrorResponse.kt
package com.example.instargram.global.error.exception

import java.time.LocalDateTime

data class ErrorResponse (
    val status: Int,
    val massage: String,
    val timestamp: LocalDateTime
)
